<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_nen"
        android:orientation="vertical">
        <!--Tên thành phố-->
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Hà Nội"
            android:textColor="@color/textwhite"
            android:textSize="@dimen/_20sdp"></TextView>
        <!--Ngày hiển thị-->
        <TextView
            android:id="@+id/tvtoday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_10sdp"
            android:text="Hôm nay"
            android:textColor="@color/textwhite"
            android:textSize="@dimen/_12sdp"></TextView>
        <!--ScrollView chi tiết-->
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--        tổng-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--            phần trên: hiển thị nhiệt độ, nắng hay mưa-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_5sdp">

                            <ImageView
                                android:id="@+id/imgBack"
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="wrap_content"
                                android:src="@drawable/iconback"></ImageView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="@dimen/_200sdp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_20sdp">

                            <ImageView
                                android:id="@+id/imCloud"
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="@dimen/_80sdp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/nhieumay"></ImageView>

                            <TextView
                                android:id="@+id/tvTeamp"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:gravity="center_vertical"
                                android:paddingBottom="@dimen/_15sdp"
                                android:text="23°C"
                                android:textColor="@color/textwhite"
                                android:textSize="@dimen/_40sdp"></TextView>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imgNext"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_15sdp"
                            android:rotationY="180"
                            android:src="@drawable/iconback"></ImageView>
                    </LinearLayout>
                    <!--Dòng nhỏ-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/tvTempMax"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="28°/"
                            android:textColor="@color/textwhite"></TextView>

                        <TextView
                            android:id="@+id/tvTempMin"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="20°"
                            android:textColor="@color/textwhite"></TextView>

                        <TextView
                            android:id="@+id/tvHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="| Humidity"
                            android:textColor="@color/textwhite"></TextView>
                    </LinearLayout>
                    <!--Trạng thái thời tiết-->
                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Nắng nhẹ"
                        android:textColor="@color/textwhite"
                        android:textSize="@dimen/_20sdp"></TextView>
                </LinearLayout>

                <!--Đường kẻ-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/background_dongke"></LinearLayout>
                <!--Tiêu đề bảng 3h -->

                <TextView
                    android:id="@+id/tvHourly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center_horizontal"
                    android:text="@string/hourly"
                    android:textColor="@color/textwhite"
                    android:textSize="@dimen/_20sdp"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvHourly"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
                <!--        Đường kẻ ngang-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/background_dongke"></LinearLayout>
                <!--            Tiêu đề bảng 5 ngày-->
                <TextView
                    android:id="@+id/tvDaily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center_horizontal"
                    android:text="@string/daily"
                    android:textColor="@color/textwhite"
                    android:textSize="@dimen/_20sdp"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:orientation="horizontal">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDaily"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
                <!--        Đường kẻ ngang-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/background_dongke"></LinearLayout>
                <!--                Biểu đồ hàng giờ-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvhourlychart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="center_horizontal"
                        android:text="@string/hourlychartC"
                        android:textColor="@color/textwhite"
                        android:textSize="@dimen/_20sdp"></TextView>

                    <lecho.lib.hellocharts.view.LineChartView
                        android:id="@+id/lineChartHourly"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"></lecho.lib.hellocharts.view.LineChartView>
                </LinearLayout>

                <!--        Đường kẻ ngang-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/background_dongke"></LinearLayout>
                <!--                Biểu đồ hàng ngày-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvdailychart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="center_horizontal"
                        android:text="@string/dailychartC"
                        android:textColor="@color/textwhite"
                        android:textSize="@dimen/_20sdp"></TextView>

                    <lecho.lib.hellocharts.view.LineChartView
                        android:id="@+id/lineChartDaily"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingRight="@dimen/_10sdp"></lecho.lib.hellocharts.view.LineChartView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>